[package]
name = "flaregun"
version = "0.1.3"
edition = "2021"
authors = ["Will <edant.io@protonmail.com>"]
description = "Tracing and monitoring tool for Linux"
repository = "https://github.com/e-dant/flaregun"
readme = "readme.md"
homepage = "https://github.com/e-dant/flaregun"
documentation = "https://github.com/e-dant/flaregun"
license = "MIT"

[lib]
name = "flaregun"
path = "src/lib.rs"

[[bin]]
name = "fl"
path = "src/main.rs"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
libbpf-rs = "0.23"
libc = "0.2.155"
log = "0.4.21"
plain = "0.2.3"
psutil = "3.3.0"
rlimit = "0.10.1"
structopt = "0.3.26"
tokio = { version = "1.39.3", features = ["macros", "rt", "time", "fs", "io-std", "io-util"] }

[build-dependencies]
libbpf-cargo = "0.23"
build-bpf = "0"
