[package]
name = "flaregun"
version = "0.3.5"
edition = "2021"
authors = ["Will <edant.io@protonmail.com>"]
description = "Tracing and monitoring tools for Linux"
documentation = "https://github.com/e-dant/flaregun"
homepage = "https://github.com/e-dant/flaregun"
keywords = ["cli", "bpf", "performance", "tracing", "metrics"]
categories = [
  "command-line-interface",
  "command-line-utilities",
  "development-tools::debugging",
  "development-tools::profiling",
  "asynchronous",
]
license = "LGPL-2.1 OR BSD-2-Clause"
readme = "readme.md"
repository = "https://github.com/e-dant/flaregun"

[lib]
name = "flaregun"
path = "src/lib.rs"

[[bin]]
name = "fl"
path = "fl/main.rs"
required-features = ["fl"]

[[bin]]
name = "fl-plot"
path = "fl-plot/main.rs"
required-features = ["fl", "fl-plot"]

[features]
fl = ["clap", "structopt"]
fl-plot = ["env_logger", "plotly", "csv", "serde"]
default = ["fl", "fl-plot"]

[dependencies]
futures = "0.3.30"
libbpf-rs = "0.23"
libc = "0.2.155"
log = "0.4.21"
plain = "0.2.3"
psutil = "3.3.0"
rlimit = "0.10.1"
tokio = { version = "1.39.3", features = ["macros", "rt", "time", "fs", "io-std", "io-util", "sync", "signal"] }

# `fl` cli dependencies
env_logger = { version = "0.11.5", optional = true }
clap = { version = "4.5.16", features = ["derive"], optional = true }
structopt = { version = "0.3.26", optional = true }

# `fl-plot` cli dependencies
plotly = { version = "0.9", optional = true }
csv = { version = "1.3.0", optional = true }
serde = { version = "1", optional = true }

[build-dependencies]
libbpf-cargo = "0.23"
build-bpf = "0.2"
